--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Vibelines – Feel the Music, Track the Mood.</title>
+    <meta name="description" content="Mapping your vibe on a timeline through your music." />
   </head>
   <body>
     <div id="root"></div>
